[C] Add transparent border to prevent page jumping

--- a/app/assets/stylesheets/partials/_components_sections.scss
+++ b/app/assets/stylesheets/partials/_components_sections.scss
@@ -248,6 +248,10 @@
       }
     }
 
+    .info-container > a {
+      border-bottom: 1px solid transparent;
+    }
+
     .info-container > a:hover, .info-container .dropdown--toggle:hover {
       border-bottom: 1px solid $tealLight;
     }
